card overflow fix

--- a/source/client/components/MiniCard/MiniCard.scss
+++ b/source/client/components/MiniCard/MiniCard.scss
@@ -26,6 +26,7 @@
 		left:0;
 		z-index:1;
 		display:none;
+		overflow: auto;
 	}
 
 	.mini-card:hover {
